<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_large"
            android:text="@string/activity_title_send_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_soft" />

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="@dimen/spacing_xxlarge"
            android:layout_height="@dimen/spacing_xxlarge"
            android:layout_marginRight="@dimen/spacing_middle"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:src="@drawable/ic_clear"
            android:tint="@android:color/white" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_color"
                android:gravity="center"
                android:padding="@dimen/spacing_middle"
                android:text="Error"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_medium">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_name"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_medium">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_input_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_medium"
                    app:counterEnabled="true"
                    app:counterMaxLength="500">

                    <EditText
                        android:id="@+id/et_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:hint="@string/hint_input_comment"
                        android:maxLength="500"
                        android:minHeight="100dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments_bottom_message"
                    android:textColor="@color/grey_hard"
                    android:textStyle="italic"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_centerInParent="true"
                    android:background="@color/grey_bg"
                    android:gravity="center"
                    android:visibility="visible">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/bt_submit_comment"
                    style="@style/RippleStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorAccentLight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bt_submit"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
